--- a/package.json
+++ b/package.json
@@ -41,17 +41,16 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.7",
     "animate.css": "^4.1.1",
     "element-theme-chalk": "^2.15.13",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-sass": "^11.0.1",
     "normalize.css": "^8.0.1",
+    "popper.js": "^1.16.1-lts",
     "sass": "^1.62.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
     "@babel/eslint-parser": "^7.21.3",
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@ember/optional-features": "^2.0.0",
